# CareerFinderApp

./: LICENSE  README.md  pyproject.toml
src/app/: mainapp.py
src/career_finder_app/: mainapp.py
src/career_finder_app/aiintegration/: huggingfaceinference.py
src/career_finder_app/jobspymodule/: __init__.py
src/career_finder_app/ui/: coverletterscreen.py  formscreen.py  resultscreen.py
