[tool.poetry]
name = "career-finder-app"
version = "1.0.0"
description = "Career Finder application with Kivy UI"
authors = ["Carolyn Joseph"]
readme = "README.md"
packages = [{ include = "career_finder_app", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
kivy = "2.3.1"
kivymd = "1.2.0"
pandas = "2.3.3"
annotated-types = "0.7.0"
asttokens = "3.0.1"
beautifulsoup4 = "4.14.3"
certifi = "2025.11.12"
charset-normalizer = "3.4.4"
colorama = "0.4.6"
comm = "0.2.3"
debugpy = "1.8.19"
decorator = "5.2.1"
docutils = "0.22.3"
executing = "2.2.1"
filetype = "1.2.0"
idna = "3.11"
ipykernel = "7.1.0"
ipython = "9.8.0"
ipython-pygments-lexers = "1.1.1"
jedi = "0.19.2"
jupyter-client = "8.7.0"
jupyter-core = "5.9.1"
kivy-deps-angle = "0.4.0"
kivy-deps-glew = "0.3.1"
kivy-garden = "0.1.5"
kivy-deps-sdl2 = "0.8.0"
markdownify = "0.13.1"
matplotlib-inline = "0.2.1"
nest-asyncio = "1.6.0"
numpy = "1.26.3"
packaging = "25.0"
parso = "0.8.5"
pillow = "10.4.0"
platformdirs = "4.5.1"
prompt-toolkit = "3.0.52"
psutil = "7.1.3"
pure-eval = "0.2.3"
pydantic = "2.12.5"
pydantic-core = "2.41.5"
pygments = "2.19.2"
pypiwin32 = "223"
python-dateutil = "2.9.0.post0"
python-jobspy = "1.1.82"
pytz = "2025.2"
pywin32 = "311"
pyzmq = "27.1.0"
regex = "2024.11.6"
requests = "2.32.5"
six = "1.17.0"
soupsieve = "2.8"
stack-data = "0.6.3"
tls-client = "1.0.1"
tornado = "6.5.4"
traitlets = "5.14.3"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
tzdata = "2025.3"
urllib3 = "2.6.2"
wcwidth = "0.2.14"
